<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

  <item android:id="@+id/sobre"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_sobre"
      app:showAsAction="never"/>
  <item android:id="@+id/compartihar"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_compartilhar"
        app:showAsAction="always"/>
  <item android:id="@+id/site"
        android:title="@string/abrir_site"
        app:showAsAction="never"/>
  <item android:id="@+id/sair"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_sair"
        app:showAsAction="ifRoom"/>

</menu>