<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bruno.aula.LoginActivity">

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="130dp"
      android:id="@+id/textInputLayout">

    <EditText
        android:id="@+id/ed_usuario"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textInputLayout"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="16dp"
      android:id="@+id/textInputLayout2">

    <EditText
        android:id="@+id/ed_senha"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"/>
  </android.support.design.widget.TextInputLayout>

  <Button
      android:id="@+id/bt_salvar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textInputLayout2"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="16dp"
      android:text="@string/salvar"/>
</RelativeLayout>
